--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,19 @@
   color: var(--ui-heading-color);
 
   span {
-    background: linear-gradient(180deg, var(--ui-light-shade-color) 52%, var(--ui-light-accent-color) 48%);
+    position: relative;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 48%;
+      background-color: var(--ui-brand-color);
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      z-index: -1;
+    }
   }
 }
 
@@ -18,7 +30,7 @@
     margin-bottom: 0;
   }
 
-  &:after {
+  &::after {
     content: "";
     display: block;
     height: 4px;
