--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 
     @media (min-width: 992px) {
       justify-content: space-between;
+      align-items: stretch;
       flex-direction: row;
     }
 
@@ -27,11 +28,27 @@
       margin: 0 auto;
     }
   }
+
+  &__picture-wrapper {
+    width: 100%;
+    padding: 0;
+    margin-left: 60px;
+
+    @media (min-width: 992px) {
+      padding: 80px 0;
+      margin-left: 0;
+      flex-basis: 55.7%;
+      max-width: 55.7%;
+    }
+  }
+
+  &__picture {
+    height: 482px;
+  }
 }
 
 .content-wrapper {
   position: relative;
-  min-width: 442px;
   padding: 50px 0 50px 20px;
   margin: 80px 0 100px;
   background: var(--ui-media-bg);
@@ -39,7 +56,8 @@
 
   @media (min-width: 992px) {
     padding: 90px 25px;
-    min-width: 500px;
+    flex-basis: 44.3%;
+    max-width: 44.3%;
   }
 }
 
@@ -53,20 +71,4 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 600;
-}
-
-.section__picture-wrapper {
-  max-width: 825px;
-  width: 100%;
-  padding: 0;
-  margin-left: 60px;
-
-  @media (min-width: 992px) {
-    padding: 80px 0;
-    margin-left: 0;
-  }
-}
-
-.section__picture {
-  height: 482px;
 }
