--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
     content: "";
     display: block;
     position: absolute;
-    width: 249px;
+    width: 100%;
     height: 32px;
     top: 38px;
     left: 0;
@@ -58,12 +58,14 @@
       line-height: var(--ui-subtitle-line-height);
       letter-spacing: 1.1px;
       color: var(--ui-text-color);
-
-      > span > b {
-        font-weight: 700;
-      }
     }
   }
+}
+
+@media (min-width: 768px) {
+  .list__item-icon {
+    margin-right: 40px;
+  } 
 }
 
 @media (min-width: 992px) {
@@ -92,6 +94,8 @@
   }
 
   .content {
+    padding-top: 45px;
+
     &__main {
       margin-left: 130px;
       justify-content: space-around;
@@ -116,14 +120,10 @@
   .list {
     margin-top: -25px;
 
-    &__item:first-child {
-      margin-top: 25px;
+    &__item {
+      .list__item-icon + .list__item-text {
+        max-width: calc(100% - 180px);
+      }
     }
   }
-}
-
-@media (min-width: 768px) {
-  .list__item-icon {
-    margin-right: 40px;
-  } 
 }
