--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,10 @@
   text-align: left;
   color: var(--ui-quote-color);
   letter-spacing: 2px;
-  background-image: linear-gradient(to top, transparent 11px, rgba(255, 238, 166, 0.4) 11px, rgba(255, 238, 166, 0.4) 43px, transparent 32px);
+
+  > span:first-child {
+    box-shadow: inset 0 -32px 0 0 rgba(255, 238, 166, 0.5);
+  }
 }
 
 .item,
@@ -17,22 +20,22 @@
 .item {
   &__picture-wrapper {
     transform: scale(0.6);
+
+    &::before {
+      content: " ";
+      width: 50px;
+      height: 7px;
+      background-color: var(--ui-brand-color);
+      display: inline-block;
+      position: absolute;
+      left: 40%;
+      top: 121%;
+    }
   }
 
   &__picture {
     background-color: transparent;
     padding-top: 100%;
-  }
-
-  &__title:before {
-    content: " ";
-    width: 30px;
-    height: 4px;
-    background-color: var(--ui-brand-color);
-    display: inline-block;
-    position: absolute;
-    left: 45%;
-    top: -58%;
   }
 
   &__title {
@@ -46,12 +49,6 @@
   }
 
   &__image {
-    object-fit: fill;
-  }
-}
-
-.item:nth-of-type(3) .item {
-  &__title {
-    padding: 0 35px;
+    object-fit: contain;
   }
 }
