--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,115 @@
 @import "wireframe-zapdos-team/src/style.css";
 
-/* start here */
+.items-wrapper {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 3px;
+  background-color: var(--ui-light-shade-color);
+  box-shadow: 0 2px 12px 0 rgba(33, 67, 71, 0.08);
+}
+
+.item {
+  position: relative;
+  flex-basis: 100%;
+
+  &__title {
+    letter-spacing: 1px;
+  }
+
+  &__position {
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: calc(50% - 150px);
+    display: block;
+    width: 300px;
+    height: 2px;
+    background-color: var(--ui-media-bg);
+  }
+
+  &:first-child::before {
+    display: none;
+  }
+}
+
+.item ul {
+  margin-top: -10px;
+}
+
+.item:nth-child(1) {
+  ul {
+    margin-top: -25px;
+  }
+}
+
+.top-icon {
+  width: 60px;
+  height: 60px;
+  margin: 0 auto;
+  border-radius: 50%;
+  background-color: var(--ui-light-shade-color);
+  box-shadow: 0 2px 12px 0 rgba(33, 67, 71, 0.08);
+}
+
+.title {
+  margin-top: 20px;
+  position: relative;
+  letter-spacing: 1.8px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: calc(50% + 100px);
+    bottom: 9px;
+    display: block;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: var(--ui-brand-color);
+  }
+}
+
+.subtitle {
+  margin-top: 10px;
+  margin-bottom: 50px;
+  letter-spacing: 1.8px;
+}
+
+a svg {
+  width: 33px;
+  height: 33px;
+
+  circle {
+    fill: transparent;
+  }
+
+  path {
+    fill: var(--ui-brand-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .items-wrapper {
+    width: 100%;
+    height: 380px;
+    flex-direction: row;
+  }
+
+  .item {
+    flex-basis: 33.33%;
+
+    &::before {
+      width: 2px;
+      height: 300px;
+      top: 40px;
+      left: 0;
+    }
+  }
+}
