--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,61 @@
-@import "wireframe-default-master/src/style.css";
+@import "wireframe-zapdos-text/src/style.css";
 
 /* start here */
+.section__inner {
+  position: relative;
+}
+
+.title {
+  text-align: left;
+
+  span {
+    position: relative;
+    z-index: 3;
+    font-size: var(--ui-hero-title-size) ;
+    font-family: var(--ui-hero-title-font-family);
+    font-weight: normal;
+    letter-spacing: 2px;
+    color: var(--ui-heading-color);
+
+    &::after {
+      content: "";
+      display: block;
+      height: 32px;
+      background: var(--ui-brand-color);
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      z-index: -1;
+    }
+  }
+}
+
+.text {
+  padding-left: 100px;
+  font-size: var(--ui-subtitle-size) ;
+  font-family: var(--ui-subtitle-font-family);
+  font-weight: normal;
+  line-height: var(--ui-subtitle-line-height);
+  color: var (--ui-dark-shade-color);
+
+  span {
+    position: relative;
+    z-index: 2;
+
+    &::after {
+      content: " ";
+      display: block;
+      background: #fafafa;
+      z-index: -1;
+      position: absolute;
+      top: -62px;
+      left: 100px;
+      right: 0;
+      bottom: -50px;
+    }
+  }
+}
+
+.section__header {
+  margin-bottom: 35px;
+}
