--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,19 @@
   letter-spacing: 2px;
 
   > span:first-child {
-    box-shadow: inset 0 -32px 0 0 rgba(255, 238, 166, 0.5);
+    position: relative;
+
+    &::before {
+      content: " ";
+      display: inline-block;
+      position: absolute;
+      bottom: 2px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      box-shadow: inset 0 -32px 0 0 var(--ui-brand-color);
+      opacity: 0.3;
+    }
   }
 }
 
