--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@
     font-family: var(--ui-sub-heading-font-family);
     position: relative;
     color: var(--ui-heading-lg-color);
-    line-height: 1;
+    line-height: calc( var(--ui-subtitle-line-height) * 0.5 );
 
     &::after {
       content: "";
