--- a/src/style.css
+++ b/src/style.css
@@ -23,8 +23,8 @@
     position: absolute;
     width: 100%;
     height: 32px;
-    top: 38px;
     left: 0;
+    bottom: 0;
     background-color: var(--ui-brand-color);
     z-index: -1;
   }
