--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,11 @@
 
 /* start here */
 .section {
-  padding-bottom: 165px;
+  padding-bottom: 0;
+
+  @media (min-width: 768px) {
+    padding-bottom: 165px;
+  }
 }
 
 .top-icon {
@@ -12,6 +16,7 @@
   padding: 20px;
   background-color: var(--ui-light-shade-color);
   border-radius: 50%;
+  box-shadow: 0 2px 20px -6px var(--ui-link-color);
 }
 
 .title {
@@ -42,11 +47,11 @@
 
 .plan {
   background-color: var(--ui-light-shade-color);
-  box-shadow: 0 2px 12px 0 var(--ui-media-bg);
   z-index: 1;
 
   @media (min-width: 768px) {
     max-height: 435px;
+    box-shadow: 0 2px 20px -6px var(--ui-link-color);
   }
 
   &:nth-of-type(1) {
@@ -60,7 +65,6 @@
   }
 
   &--main {
-    box-shadow: 0 2px 12px 0 var(--ui-media-bg);
     border-radius: 3px;
     z-index: 2;
 
@@ -69,6 +73,7 @@
       margin-bottom: -40px;
       max-height: 520px;
       max-width: 370px;
+      box-shadow: 0 2px 20px -6px var(--ui-link-color);
     }
 
     .plan {
