--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
-/* start here */
+.title {
+  font-family: var(--ui-block-title-font-family);
+  text-transform: uppercase;
+  line-height: calc(var(--ui-block-title-line-height) * 0.968);
+  color: var(--ui-light-shade-color);
+}
+
+.description {
+  font-size: var(--ui-subtitle-size);
+  color: var(--ui-light-shade-color);
+}
+
+@media (min-width: 992px) {
+  .section {
+    padding: 100px 0;
+  }
+}
