--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,53 @@
 @import "wireframe-zapdos-footer/src/style.css";
 
 /* start here */
+.logo {
+  img {
+    width: 150px;
+
+    @media(min-width: 992px) {
+      width: 200px;
+    }
+  }
+}
+
+.nav {
+  &-list {
+    &__item {
+
+      @media (min-width: 992px) {
+        margin-left: 14px;
+        margin-right: 14px;
+      }
+
+      @media (min-width: 1200px) {
+        margin-left: 17px;
+        margin-right: 17px;
+      }
+    }
+  }
+}
+
+.footer {
+  background-color: var(--ui-dark-shade-color);
+
+  @media (min-width: 992px) {
+    padding: 30px 0;
+  }
+
+  &__bottom {
+
+    @media (min-width: 992px) {
+      margin-top: 40px;
+      padding: 30px 0 5px;
+    }
+  }
+
+  &__meta {
+    font-size: calc(var(--ui-caption-size) * 0.92);
+
+    @media(min-width: 992px) {
+      font-size: var(--ui-text-size);
+    }
+  }
+}
