--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,33 @@
 @import "wireframe-zapdos-gallery/src/style.css";
 
 /* start here */
+.section {
+  background-color: var(--ui-media-bg);
+  
+  &__header {
+    margin-top: 30px;
+    margin-bottom: 38px;
+  }
+}
+
+.title {
+  font-weight: 800;
+  line-height: calc(var(--ui-block-title-line-height)* 0.775);
+  margin-bottom: 17px;
+}
+
+.item {
+  margin-bottom: 34px;
+}
+
+.button {
+  margin-left: 8px;
+  padding: 8px 18px;
+  border-radius: 0;
+}
+
+@media (min-width: 992px) {
+  .subtitle {
+    max-width: 618px;
+  }
+}
