--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,44 @@
 @import "wireframe-zapdos-text/src/style.css";
 
 /* start here */
+
+.section {
+  color: var(--ui-block-bg);
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+  padding: 102px 0;
+}
+
+.section:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(39, 41, 43, 0.86) 100%);
+  z-index: -1;
+}
+
+.title {
+  color: var(--ui-light-shade-color);
+  text-transform: uppercase;
+  margin-bottom: 14px;
+}
+
+.subtitle {
+  color: var(--ui-light-shade-color);
+  padding: 0 45px;
+}
+
+.text {
+  text-align: center;
+  padding: 0 200px;
+}
+
+@media screen and (max-width:767px) {
+  .text {
+    padding: 0;
+  }
+}
