--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,47 @@
 @import "wireframe-zapdos-why/src/style.css";
 
 /* start here */
+.section__inner {
+  max-width: 1230px;
+}
+
+.title {
+  text-transform: uppercase;
+  font-weight: 800;
+  margin-bottom: 15px;
+}
+
+.subtitle {
+  max-width: 460px;
+  margin-bottom: 28px;
+}
+
+.item {
+  margin-top: 0;
+
+  &__top-element {
+    width: 105px;
+    height: auto;
+    margin-bottom: 0;
+  }
+
+  svg {
+    color: var(--ui-light-accent-color);
+    height: auto;
+  }
+
+  &__title {
+    margin-bottom: 20px;
+    font-size: calc(var(--ui-heading-size) * 1.0909);
+  }
+  
+  p {
+    max-width: 310px;
+    margin: 0 auto;
+  }
+}
+
+.btns-group {
+  flex-direction: row-reverse;
+  margin-top: 30px;
+}
