--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@
   &__title {
     margin-bottom: 20px;
     font-size: calc(var(--ui-heading-size) * 1.0909);
+    text-transform: capitalize;
   }
 
   &__desc {
@@ -44,4 +45,8 @@
 .btns-group {
   flex-direction: row-reverse;
   margin-top: 30px;
+}
+
+.button {
+  text-transform: capitalize;
 }
