--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,40 @@
 @import "wireframe-zapdos-header/src/style.css";
 
 /* start here */
+
+.logo__title {
+  text-transform: uppercase;
+  position: relative;
+  letter-spacing: 3px;
+  font-family: var(--ui-subtitle-font-family);
+  color: var(--ui-dark-shade-color);
+  font-weight: var(--ui-subtitle-font-weight);
+  font-size: calc(var(--ui-block-title-size) * 0.5);
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -10px;
+    width: 5px;
+    height: 5px;
+    background: var(--ui-brand-color);
+    border-radius: 50%;
+  }
+}
+
+.nav-list__item {
+  color: var(--ui-light-shade-color);
+  font-size: var(--ui-small-text-size);
+  font-weight: var(--ui-small-text-font-weight);
+  font-family: var(--ui-small-text-font-family);
+  letter-spacing: 1.8px;
+}
+
+@media (min-width: 992px) {
+  .nav-list__item {
+    color: var(--ui-dark-shade-color);
+  }
+}
